Outlets Fixes and Optimizations

--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -1,7 +1,11 @@
 <header class="flex justify-between px-5 md:px-12 xl:px-12 2xl:px-24 py-[22px] border-b">
   <!-- Logo -->
   <div>
-    <span class="text-2xl text-vendblocblue font-bold opacity-75">VendBloc</span>
+    
+      <a routerLink="/home">
+        <span class="text-2xl text-vendblocblue font-bold opacity-75">VendBloc    </span>
+      </a>
+
   </div>
   @if(isAuthenticated){
   <!-- Links -->
