Category count and Optimizations

--- a/src/app/components/side-menu-item/side-menu-item.component.html
+++ b/src/app/components/side-menu-item/side-menu-item.component.html
@@ -22,6 +22,7 @@
         >
       </span>
       <span class="text-[#0F172A] opacity-50 group-hover:text-white">
+        {{menuProp}}
       </span>
     </div>
   </div>
